Z-index bug for tabs fixed

--- a/src/css/TabContainer.css
+++ b/src/css/TabContainer.css
@@ -2,7 +2,7 @@
   position: absolute !important;
   top: 380px !important;
   margin-left: 126px !important;
-  z-index: -10;
+  z-index: 180;
 }
 
 .btn-primary {
@@ -14,7 +14,7 @@
   color: black !important;
   border: 2px rgb(22, 161, 131) solid !important;
   transform:scale(1.1);
-  z-index: 10;
+  z-index: 190;
 }
 
 .btn-primary.inactive {
@@ -25,7 +25,7 @@
 
 .btn-primary:hover {
   transform: scale(1.2);
-  z-index: 10;
+  z-index: 200;
 }
 
 
